# prbt_robot

prbt_demo_poses/: CMakeLists.txt  package.xml
prbt_demo_poses/src/: first_demo.cpp
prbt_robot_moveit_config/: package.xml
prbt_robot_moveit_config/config/: moveit_controllers.yaml
prbt_robot_moveit_config/launch/: moveit_planning_execution.launch.py
prbt_robot_support/: CMakeLists.txt  package.xml
prbt_robot_support/config/: prbt_ros2_control.yaml
prbt_robot_support/config/prbt/: bus.yml
prbt_robot_support/launch/: prbt_controller_spawner.launch.py  prbt_fake_slave.launch.py  robot.launch.py
prbt_robot_support/urdf/: prbt.ros2_control.xacro  prbt.urdf  prbt.xacro  prbt_macro.xacro
